# rss-app

./: README.md
.github/scripts/: decrypt-secrets.sh  export-ipa.sh
.github/secrets/: RSS_App_iOS_Certificate.p12.gpg  RSS_App_iOS_Distribution.cer.gpg  RSS_App_iOS_Provisioning_Profile.mobileprovision.gpg
.github/workflows/: deploy.yml
api/: API.md  Cargo.toml  Procfile  README.md  config.toml
api/migrations/2021-04-13-070525_initialize/: down.sql  up.sql
api/src/: logs.rs  main.rs
api/src/api/: article.rs  articles.rs  categories.rs  feed.rs  feeds.rs  mod.rs
api/src/api/account/: me.rs
api/src/config/: mod.rs
api/src/db/: mod.rs  models.rs  schema.rs
api/src/routes/auth/: callback.rs  google.rs  login.rs  logout.rs  mod.rs  register.rs
api/src/utils/: cors.rs  mod.rs  request_log.rs  sessions.rs
api/src/utils/auth/: mod.rs
api/src/utils/response/: mod.rs
iOS/: README.md  exportOptions.plist
iOS/RSS App/: AppState.swift  HTMLWebView.swift  Info.plist  Persistence.swift  RSSApp.swift  TextView.swift  Types.swift  WebView.swift
iOS/RSS App.xcodeproj/: project.pbxproj
iOS/RSS AppTests/: RSS_AppTests.swift
iOS/RSS AppUITests/: RSS_AppUITests.swift
macOS/: README.md
macOS/RSS App/: AppState.swift  ContentView.swift
macOS/RSS App.xcodeproj/: project.pbxproj
macOS/RSS App.xcworkspace/: contents.xcworkspacedata
web/: .prettierrc  README.md  package.json  rollup.config.js  static.json
web/public/: global.css  index.html  library.css
web/src/: App.svelte  locations.ts  state.ts  types.ts  utils.ts
web/src/stores/: theme.js
(+66 files in other folders)
